--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,13 @@
 			<version>${jetbrains.annotations.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- Hardware Key -->
+
+		<dependency>
+			<groupId>com.fazecast</groupId>
+			<artifactId>jSerialComm</artifactId>
+			<version>[2.0.0,3.0.0)</version>
+		</dependency>
 	</dependencies>
 
 	<build>
